github button fixed

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>I am happy currently working on <br>this project</h2><br>
-										<a href="#" class="btn-hire">View Github</a>
+										<a href="https://github.com/jacobwangari?tab=repositories" class="btn-hire">View Github</a>
 									</div>
 								</div>
 							</div>
@@ -550,5 +550,11 @@
 	<script src="js/main.js"></script>
 
 	</body>
+	<footer>
+		<div class="container">
+		  <p>&copy; 2023 Jacmwas. All rights reserved.</p>
+		</div>
+	</footer>
+	  
 </html>
 
